--- a/env_folder/env_dev_stand.env
+++ b/env_folder/env_dev_stand.env
@@ -1,4 +1,4 @@
 ### докер переменные окружения для dev стенда
-ENV ES_HOST=datana-logs.datana.ru
-ENV ES_PORT=9200
+ES_HOST=datana-logs.datana.ru
+ES_PORT=9200
 
