NKR-783: проба - допилинг v7

--- a/env_folder/env_dev_stand.env
+++ b/env_folder/env_dev_stand.env
@@ -1,4 +1,6 @@
 ### докер переменные окружения для dev стенда
 ES_HOST=datana-logs.datana.ru
 ES_PORT=9200
+ES_USERNAME=elastic
+ES_PASSWORD=changeme
 
