NKR-783: проба - докер запустился

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,10 @@
-# Ignore OS artifacts
-**/.DS_Store
+*
+!index.js
+!package-lock.json
+!package.json
+!.babelrc
+!src/
+!scripts/
+!elastalert_modules/
+!rule_templates/
+!config/
