--- a/env_folder/env_dev_stand.env
+++ b/env_folder/env_dev_stand.env
@@ -3,4 +3,8 @@ ES_HOST=datana-logs.datana.ru
 ES_PORT=9200
 ES_USERNAME=elastic
 ES_PASSWORD=changeme
+ES_USE_SSL=False
+ES_URL_PREFIX=http://
+
+## http://datana-logs.datana.ru:9200/
 
