--- a/Dockerfile_original
+++ b/Dockerfile_original
@@ -1,5 +1,5 @@
 FROM python:alpine as builder
-# Заимтовано от https://hub.docker.com/r/jertel/elastalert-docker/dockerfile
+# Заимствовано от https://hub.docker.com/r/jertel/elastalert-docker/dockerfile
 LABEL description="ElastAlert suitable for Kubernetes and Helm"
 LABEL maintainer="Datana Ltd, city Moscow"
 
