--- a/elastalert_rules_yaml/config.yaml
+++ b/elastalert_rules_yaml/config.yaml
@@ -41,7 +41,7 @@ writeback_alias: elastalert_alerts
 alert_time_limit:
   days: 2
 
-
+use_ssl: false
 es_url_prefix: "http://"
 
 # Custom logging configuration
