--- a/env_folder/env_dev_stand.env
+++ b/env_folder/env_dev_stand.env
@@ -4,6 +4,6 @@ ES_PORT=9200
 ES_USERNAME=elastic
 ES_PASSWORD=changeme
 ES_USE_SSL=False
-ES_URL_PREFIX=http://
+###ES_URL_PREFIX=dev
 ## http://datana-logs.datana.ru:9200/
 
