NKR-813: проба успешно залили докер

--- a/elastalert_rules_yaml/elastalert_config.yaml
+++ b/elastalert_rules_yaml/elastalert_config.yaml
@@ -87,9 +87,9 @@ logging:
         handlers: []
         propagate: true
 
-      '':  # root logger
-        level: DEBUG
-          handlers:
-            - console
-            - file
-        propagate: false
+#      '':  # root logger
+#        level: DEBUG
+#          handlers:
+#            - console
+#            - file
+#        propagate: false
