--- a/env_folder/env_dev_stand_with_params.env
+++ b/env_folder/env_dev_stand_with_params.env
@@ -3,7 +3,7 @@ ES_HOST=${ES_HOST}
 ES_PORT=${ES_PORT}
 ES_USERNAME=${ES_USERNAME}
 ES_PASSWORD=${ES_PASSWORD}
-ES_USE_SSL=${ES_USE_SSL"
+ES_USE_SSL=${ES_USE_SSL}
 
 ### вредный перефик, с ним не работает
 ###ES_URL_PREFIX=dev
