--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -12,17 +12,7 @@ aggregation:
 filter:
   - query:
       query_string:
-        ## simple kostya filter for example with contains '112' chars
-        ###query: "data.message : *112*"
-        ###query: "level.keyword : WARN"
-        ###query: "level.keyword : INFO"
-        ### ok message#### query: "data.requestTransportInfoId : ef171ac4-d89d-4ed5-9bb0-bf0f57d5bb03"
-        ######################query: "@timestamp gte now-1d/d AND @timestamp lte now/d"
-        ## query : "_exists_: @timestamp >= 'now-1s/s'"
-        ##query: "logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api"
-        query: "_exists_: @timestamp >=: 'now-1s' AND NOT _exists_: logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID"
-### ok3 ### logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID\: 8e630dd0-5796-45e0-8d85-8a14c5d872dd*
-      ### warn-ok3 ### logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID\: 8e630dd0-5796-45e0-8d85-8a14c5d872dd* AND @timestamp >= "now-1s/s"
+        query: "(@timestamp >=: 'now-1s') AND NOT (logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*)"
 alert:
   - "telegram"
   -
