NKR-813: rules fix - was type is error

--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -1,18 +1,22 @@
 es_host: datana-logs.datana.ru
 es_port: 9200
 name: Socket Adapter Of Datana Smart
-type: frequency
+##type: frequency
+type: flatline
+threshold: 1
 index: datana-smart-dev-logs-*
 num_events: 10
 timeframe:
-  hours: 1
-aggregation_key: "@timestamp"
-aggregation:
-  seconds: 2
+  minutes: 1
+#aggregation_key: "@timestamp"
+#aggregation:
+#  seconds: 2
 filter:
   - query:
       query_string:
-        query: "(@timestamp >= 'now-1s') AND (NOT _exists_ logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND NOT _exists message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*)"
+        query: "@timestamp >= 'now-1s' AND NOT(_exists_ logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND _exists message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*)"
+
+        ###query: "(@timestamp >= 'now-1s') AND (NOT _exists_ logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND NOT _exists message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*)"
 alert:
   - "telegram"
   -
