--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -1,9 +1,10 @@
 es_host: datana-logs.datana.ru
 es_port: 9200
 name: Socket Adapter Of Datana Smart
-##type: frequency
-type: flatline
-threshold: 1
+#cardinality: This rule matches when a the total number of unique values for a certain field within a time frame is higher or lower than a threshold.
+type: cardinality
+cardinality_field: "@timestamp"
+min_cardinality: 1
 index: datana-smart-dev-logs-*
 num_events: 10
 timeframe:
