NKR-813: rules fix - type: flatline: try 13 -- thinks on dev index

--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -18,14 +18,14 @@ timeframe:
 use_count_query: True
 
 
-threshold: 2
+threshold: 20000
 
 doc_type: _doc
 
-#filter:
-#  - query:
-#      query_string:
-#        query: "NOT _exist_ @timestamp"
+filter:
+  - query:
+      query_string:
+        query: "@timestamp >= 'now-1s'"
         ##query: "logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*"
 
         ### query: "@timestamp >= 'now-1s' AND _exists_ logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND _exists message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*"
