NKR-813: rules fix - type: any: try 14 -- thinks on dev index

--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -16,6 +16,15 @@ type: any
 timeframe:
   seconds: 2
 
+buffer_time:
+  minutes: 60
+
+alert_time_limit:
+  days: 1
+
+realert:
+  minutes: 10
+
 filter:
   - query:
       query_string:
