--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -8,7 +8,7 @@ name: Socket Adapter Of Datana Smart
 index: datana-smart-dev-logs-*
 ####index: datana-smart-test-logs-*
 # A rule that matches if num_events number of events occur within a timeframe
-num_events: 10
+num_events: 1
 
 ###################################
 type: any
@@ -28,7 +28,7 @@ realert:
 filter:
   - query:
       query_string:
-        query: "NOT _exits_ @timestamp >= 'now-1s'"
+        query: "NOT (_exits_ @timestamp >= 'now-1s')"
         ##query: "logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*"
 
         ### query: "@timestamp >= 'now-1s' AND _exists_ logger_name: ru.datana.integrationadapter.socket.integration.connector.S7Api AND _exists message: *Получена data из S7Connector и создан МultiSensorModel объект с sensorTemperatureUUID*"
@@ -53,3 +53,10 @@ alert_text_type: alert_text_only
 query_key: [logger_name, message]
 include: [logger_name, message]
 top_count_keys: [logger_name, message]
+
+
+#smtp_host: 'mysmtpserverfqdn'
+#smtp_port: 587
+#smtp_ssl: true
+#from_addr: 'notifications@mydomain.com'
+#smtp_auth_file: '/opt/elastalert/smtp_auth_file'
