NKR-813: code review

--- a/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
+++ b/elastalert_rules_yaml/elk_alert_socket_adapter.yaml
@@ -3,7 +3,7 @@ run_every:
 
 name: Socket Adapter Of Datana Smart
 
-index: ${RULE_INDEX} datana-smart-dev-logs-*
+index: ${RULE_INDEX}
 # A rule that matches if num_events number of events occur within a timeframe
 num_events: 1
 
